--- a/src/styles/startAnimation.css
+++ b/src/styles/startAnimation.css
@@ -10,7 +10,6 @@
     opacity: 0;
   }
   to {
-    translate: 0;
     opacity: 1;
   }
 }
